# sistema-redes2

./: .env  .replit  Pasted-Please-review-upgrade-and-optimize-the-entire-system-to-make-it-fully-modern-professional-and-op-1757192903865_1757192903866.txt  Pasted-Please-update-and-modernize-the-system-to-make-it-look-more-professional-while-keeping-all-existing--1757192042248_1757192042248.txt  README.md  README.txt  __init__.py  alert.py  app.py  config  database.py  filesystem_state.json  index  index.html  machines.csv  machines.csv.backup  machines_backup.csv  machinesold.csv  main  main.py  middleware.py  models.py  pack-759da3c94bdcd53f20b8c43257d2f8dca39cfcc5.idx  pack-759da3c94bdcd53f20b8c43257d2f8dca39cfcc5.rev  packed-refs  pyproject.toml  replit.md  start.cmd  start.cmd - Atalho.lnk  status.db  status.db-journal  status.db-shm  status.db-wal  user.py
attached_assets/: Pasted-Please-review-upgrade-and-optimize-the-entire-system-to-make-it-fully-modern-professional-and-op-1757192903865_1757192903866.txt
attached_assets/TestMaster/: .replit
attached_assets/TestMaster/attached_assets/: Pasted-Please-update-and-modernize-the-system-to-make-it-look-more-professional-while-keeping-all-existing--1757192042248_1757192042248.txt
src/: __init__.py
src/api/: __init__.py  main.py
src/api/routes/: alerts.py  auth.py  hosts.py  monitoring.py  users.py
src/auth/: __init__.py  fastapi_middleware.py  service.py
src/models/: __init__.py  base.py  host.py
src/services/: alerts.py  discovery.py  monitoring.py
templates/: index.html  machine_detail.html
